k8s/apps/media/flexget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexget
  labels:
    app: flexget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flexget
  template:
    metadata:
      labels:
        app: flexget
    spec:
      nodeSelector:
      containers:
        - name: flexget
          image: wiserain/flexget:3.21.0@sha256:cdbf7be182a7477a6b50afde82b2eac044b73b7bb7fe8a0b3b2e68f1f3cf580d
          resources:
            requests:
              memory: 224Mi
            limits:
              memory: 384Mi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - SETUID
                - SETGID
                - KILL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: conf
              mountPath: /config/config.yml
              subPath: config.yml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: flexget-config
        - name: data
          persistentVolumeClaim:
            claimName: media-downloads
        - name: conf
          configMap:
            name: flexget-conf
