k8s/apps/media/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
      containers:
        - name: filebrowser
          image: gtstef/filebrowser:1.5.6-stable@sha256:7c5d7ac8ffda31294d278063cf9d2e04303b39e6dce1f4c691342240ca7703b8
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 48Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - name: data
              mountPath: /srv
            - name: database
              mountPath: /database
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /srv/downloads
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filebrowser-data
        - name: database
          persistentVolumeClaim:
            claimName: filebrowser-database
        - name: config
          configMap:
            name: filebrowser-conf
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
spec:
  ingressClassName: traefik
  rules:
    - host: filebrowser.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
